refactor: 修改代码结构