@@ -1,28 +1,28 @@
 package com.cabin.ter.listener;
 
+import com.cabin.ter.adapter.MQMessageBuilderAdapter;
 import com.cabin.ter.adapter.MemberAdapter;
 import com.cabin.ter.adapter.MessageAdapter;
-import com.cabin.ter.adapter.RoomAdapter;
 import com.cabin.ter.admin.domain.UserDomain;
 import com.cabin.ter.cache.GroupMemberCache;
 import com.cabin.ter.cache.UserInfoCache;
 import com.cabin.ter.chat.domain.GroupMemberDomain;
 import com.cabin.ter.chat.domain.GroupRoomDomain;
 import com.cabin.ter.config.ThreadPoolConfig;
-import com.cabin.ter.constants.vo.response.WSBaseResp;
+import com.cabin.ter.constants.TopicConstant;
+import com.cabin.ter.constants.response.WSBaseResp;
 import com.cabin.ter.listener.event.GroupMemberAddEvent;
 import com.cabin.ter.service.ChatService;
-import com.cabin.ter.service.PushService;
-import com.cabin.ter.vo.request.ChatMessageReq;
-import com.cabin.ter.vo.response.WSMemberChange;
+import com.cabin.ter.template.RocketMQEnhanceTemplate;
+import com.cabin.ter.constants.request.ChatMessageReq;
+import com.cabin.ter.constants.response.WSMemberChange;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.event.TransactionalEventListener;
 
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
@@ -35,11 +35,11 @@ public class GroupMemberAddListener {
     @Autowired
     private ChatService chatService;
     @Autowired
-    private PushService pushService;
-    @Autowired
     private UserInfoCache userInfoCache;
     @Autowired
     private GroupMemberCache groupMemberCache;
+    @Autowired
+    private RocketMQEnhanceTemplate rocketMQEnhanceTemplate;
     @Async(value = ThreadPoolConfig.WS_EXECUTOR)
     @TransactionalEventListener(classes = GroupMemberAddEvent.class, fallbackExecution = true)
     public void sendAddMsg(GroupMemberAddEvent event){
@@ -67,11 +67,11 @@ public class GroupMemberAddListener {
         List<Long> uidList = memberDomainList.stream().map(GroupMemberDomain::getUid).collect(Collectors.toList());
         Map<Long, UserDomain> userDomainMap = userInfoCache.getBatch(uidList);
 
-        List<UserDomain> userDomainList = userDomainMap.values().stream().collect(Collectors.toList());
+        List<UserDomain> userDomainList = userDomainMap.values().stream().toList();
 
         userDomainList.forEach(user -> {
             WSBaseResp<WSMemberChange> ws = MemberAdapter.buildMemberAddWS(groupRoomDomain.getRoomId(), user);
-            pushService.sendPushMsg(ws, user.getUserId());
+            rocketMQEnhanceTemplate.sendSecureMsg(TopicConstant.CHAT_MESSAGE_SEND_TOPIC, MQMessageBuilderAdapter.buildChatMessageDTO(ws, Collections.singletonList(user.getUserId())));
         });
         //移除缓存
         groupMemberCache.evictMemberUidList(groupRoomDomain.getRoomId());
